--- a/Water_2022.ipynb
+++ b/Water_2022.ipynb
@@ -2,20 +2,20 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DCAYQuyEqyuR",
-        "outputId": "6301bb28-a33f-4513-be83-2e823ca5105b"
+        "outputId": "efae38fe-7d8b-41aa-ab53-86839c0a2f54"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -35,13 +35,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "n74aZARs_tG1",
-        "outputId": "371b3e63-a4d4-466e-8bfb-2ae145e70c46"
+        "outputId": "75369161-c01c-49cc-8f03-5e0171b28faf"
       },
       "outputs": [
         {
@@ -68,7 +68,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EW24ah0ERe_k",
-        "outputId": "654d8acb-b8bb-49c5-a8bf-307433f27689"
+        "outputId": "7bcbdfa3-f6c5-4bc7-e2f5-ecc9f0e3297b"
       },
       "outputs": [
         {
@@ -79,7 +79,7 @@
             "Thread(s) per core:  2\n",
             "Core(s) per socket:  1\n",
             "Socket(s):           1\n",
-            "Model name:          AMD EPYC 7B12\n"
+            "Model name:          Intel(R) Xeon(R) CPU @ 2.20GHz\n"
           ]
         }
       ],
@@ -95,7 +95,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eOUslny30IXN",
-        "outputId": "d06afee6-064d-45df-e4f4-67de817e5013"
+        "outputId": "1b83ef1e-7897-465f-9fc6-c86727b1e43e"
       },
       "outputs": [
         {
@@ -103,7 +103,7 @@
           "name": "stdout",
           "text": [
             "              total        used        free      shared  buff/cache   available\n",
-            "Mem:            12G        842M        9.2G        1.2M        2.6G         11G\n",
+            "Mem:            12G        823M        9.3G        1.2M        2.6G         11G\n",
             "Swap:            0B          0B          0B\n"
           ]
         }
@@ -120,7 +120,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sEIZ9U-R0UI9",
-        "outputId": "e616fcbd-2689-4f82-e6ba-8978c9e36166"
+        "outputId": "ac0fa462-981b-4016-90b4-2a60a1eaa433"
       },
       "outputs": [
         {
@@ -153,7 +153,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ouYNz1s10aXr",
-        "outputId": "cc140958-39e8-4c30-f2c6-3d8e4b610bd3"
+        "outputId": "2bdd1e05-270f-4ee8-f69b-3489faf7b33f"
       },
       "outputs": [
         {
@@ -210,7 +210,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bDTbRe9mF4Jx",
-        "outputId": "ab3a45a8-b755-46a1-8de9-f31c1f1648b9"
+        "outputId": "4eec0a41-b412-4c33-bd0e-7372bee4b78e"
       },
       "outputs": [
         {
@@ -248,15 +248,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WBP7STCmK-ru",
-        "outputId": "fda6259e-73bb-4ddf-cb26-1f2a77281f00"
+        "outputId": "38335f0e-ed82-4890-b2b5-ba52029fb0ba"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[K     |████████████████████████████████| 281.4 MB 50 kB/s \n",
-            "\u001b[K     |████████████████████████████████| 199 kB 73.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 281.4 MB 43 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 199 kB 65.7 MB/s \n",
             "\u001b[?25h  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
@@ -273,18 +273,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0zCM53AzFHi0",
-        "outputId": "f891fdf8-8117-4394-fb5f-05a82d32b570"
+        "outputId": "d4f3baa0-1cbd-44e3-8089-1c20a1819856"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[K     |████████████████████████████████| 1.0 MB 38.9 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 1.0 MB 46.4 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 67 kB 6.8 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 16.7 MB 66.0 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 6.3 MB 63.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.0 MB 7.6 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.0 MB 44.6 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 67 kB 6.7 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 16.7 MB 223 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 6.3 MB 22.5 MB/s \n",
             "\u001b[?25h"
           ]
         }
@@ -304,15 +304,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 13,
       "metadata": {
-        "id": "pGImqYqXHX7q"
+        "id": "pGImqYqXHX7q",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ad169fd7-d0e5-40ae-dba2-ccb54946c7bd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1CbCm0n41uKHPi-L8bTag2G6RA71tdaM4\n",
+            "To: /content/DENUE_Parquets.zip\n",
+            "100% 486M/486M [00:02<00:00, 213MB/s]\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=134WppiiO8fdYOxD4yJI-ZX51YTwnVgLu\n",
+            "To: /content/SCINCE_Parquets.zip\n",
+            "100% 1.14G/1.14G [00:06<00:00, 173MB/s]\n"
+          ]
+        }
+      ],
       "source": [
         "#Descarga de Bases de Datos SCINCE 2020 y DENUE Mayo 2022\n",
-        "!cp /content/drive/MyDrive/SCINCE_Parquets.zip /content\n",
-        "!cp /content/drive/MyDrive/DENUE_Parquets.zip /content\n"
+        "#!cp /content/drive/MyDrive/SCINCE_Parquets.zip /content\n",
+        "#!cp /content/drive/MyDrive/DENUE_Parquets.zip /content\n",
+        "!gdown 1CbCm0n41uKHPi-L8bTag2G6RA71tdaM4\n",
+        "!gdown 134WppiiO8fdYOxD4yJI-ZX51YTwnVgLu\n"
       ]
     },
     {
@@ -1032,7 +1053,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 618
+          "height": 617
         },
         "id": "5hoAkKUlhBH5",
         "outputId": "c15a51d8-f5b0-436b-a27b-4884f96f546a"
